# storyteller-llm

./: .gitignore  README.md  pyproject.toml
foundations/: bigram.ipynb  mlp.ipynb
foundations/micrograd/: __init__.py  demo.ipynb  engine.py  nn.py  test_engine.py
