[project]
name = "storyteller-llm"
version = "0.1.0"
description = "A GPT-2 class transformer trained on TinyStories, built from scratch"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "jupyter",
    "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["foundations*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
